[package]
name = "turtle"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
rustyline = { version = "15.0.0" }

[features]
default = ["with-file-history"]
with-file-history = []
